Minor clean up, combined the apt-get commands.

--- a/virtualization/vagrant_ansible_docker/dockerfiles/riak/Dockerfile
+++ b/virtualization/vagrant_ansible_docker/dockerfiles/riak/Dockerfile
@@ -7,14 +7,13 @@ RUN apt-get update
 RUN apt-get upgrade -y
 
 # Install and setup project dependencies
-RUN apt-get install -y curl lsb-release supervisor openssh-server
+RUN apt-get install -y curl lsb-release supervisor openssh-server rsyslog
 RUN mkdir -p /var/run/sshd
 RUN mkdir -p /var/log/supervisor
 RUN locale-gen en_US en_US.UTF-8
 ADD supervisord.conf /etc/supervisor/conf.d/supervisor.conf
 # Set the root account password
 RUN echo 'root:basho' | chpasswd
-RUN apt-get install -y rsyslog
 
 RUN curl -s http://apt.basho.com/gpg/basho.apt.key | apt-key add --
 RUN echo "deb http://apt.basho.com $(lsb_release -cs) main" > /etc/apt/sources.list.d/basho.list
