--- a/virtualization/vagrant_ansible_docker/Vagrantfile
+++ b/virtualization/vagrant_ansible_docker/Vagrantfile
@@ -28,17 +28,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
 
   # run Ansible as the provisioner if the host OS is Unix-like (Linux, OS X), use
-  # the shell provisioner otherwise - the end result is the same in both cases. For some
-  # reason ENV["OS"] is not defined in OS X so if it's nil, then we assume we're not in Windows  
-  if ENV["OS"] != nil    
-    if ENV["OS"].include? "Windows" or ENV["OS"].include? "MINGW32"
-      provisioner = :shell
-    else
-      provisioner = :ansible
-    end
-  end
-
-  if provisioner == :shell  
+  # the shell provisioner otherwise - the end result is the same in both cases
+  if ENV["OS"].include? "Windows" or ENV["OS"].include? "MINGW32"
     config.vm.provision "shell", path: "./provisioning/setup.sh"
   else
     config.vm.provision :ansible do |ansible|
