--- a/virtualization/vagrant_ansible_docker/provisioning/playbook.yml
+++ b/virtualization/vagrant_ansible_docker/provisioning/playbook.yml
@@ -12,3 +12,9 @@
       apt_repository: repo='deb http://get.docker.io/ubuntu docker main'
     - name: make sure docker is installed
       apt: pkg=lxc-docker
+    - name: add apt_key for nodejs
+      apt_key: id=C7917B12
+    - name: add repository for node
+      apt_repository: repo='deb http://ppa.launchpad.net/chris-lea/node.js/ubuntu saucy main'
+    - name: make sure nodejs is installed
+      apt: pkg=nodejs
