--- a/virtualization/vagrant_ansible_docker/dockerfiles/riak/Dockerfile
+++ b/virtualization/vagrant_ansible_docker/dockerfiles/riak/Dockerfile
@@ -6,8 +6,12 @@ RUN sed -i.bak 's/main$/main universe/' /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get upgrade -y
 
+# Hack for initctl
+RUN dpkg-divert --local --rename --add /sbin/initctl
+RUN ln -s /bin/true /sbin/initctl
+
 # Install and setup project dependencies
-RUN apt-get install -y curl lsb-release supervisor openssh-server rsyslog
+RUN apt-get install -y curl lsb-release supervisor openssh-server rsyslog net-tools
 RUN mkdir -p /var/run/sshd
 RUN mkdir -p /var/log/supervisor
 RUN locale-gen en_US en_US.UTF-8
@@ -23,10 +27,6 @@ RUN apt-get update
 RUN apt-get install -y riak
 RUN sed -i.bak 's/127.0.0.1/0.0.0.0/' /etc/riak/app.config
 RUN echo "ulimit -n 4096" >> /etc/default/riak
-
-# Hack for initctl
-RUN dpkg-divert --local --rename --add /sbin/initctl
-RUN ln -s /bin/true /sbin/initctl
 
 # Expose the ports
 EXPOSE 8087 8098 22
