--- a/virtualization/vagrant_ansible_docker/dockerfiles/cassandra/supervisord.conf
+++ b/virtualization/vagrant_ansible_docker/dockerfiles/cassandra/supervisord.conf
@@ -12,3 +12,9 @@ autorestart=true
 
 [program:cassandra]
 command=/usr/sbin/cassandra -f start
+
+[program:dns-heartbeat]
+command=/usr/local/bin/dns-heartbeat.sh
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
+stderr_logfile=/var/log/supervisor/%(program_name)s.log
+autorestart=true
