Added MongoDB image. Modified the meteorite dock to work with the new MongoDB dock. Modified all the images to have a /21 as subnet mask to allow for an own range for meteor and mongo. Added the example project for meteor.

--- a/virtualization/vagrant_ansible_docker/dockerfiles/mongodb/supervisord.conf
+++ b/virtualization/vagrant_ansible_docker/dockerfiles/mongodb/supervisord.conf
@@ -10,7 +10,8 @@ stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
-# Meteorite start here
+[program:mongodb]
+command=/usr/bin/mongod
 
 [program:dns-heartbeat]
 command=/usr/local/bin/dns-heartbeat.sh
