--- a/virtualization/vagrant_ansible_docker/dockerfiles/opscenter/supervisord.conf
+++ b/virtualization/vagrant_ansible_docker/dockerfiles/opscenter/supervisord.conf
@@ -10,16 +10,13 @@ stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
-[program:cassandra]
-command=/usr/sbin/cassandra -f start
-
 [program:dns-heartbeat]
 command=/usr/local/bin/dns-heartbeat.sh
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
-[program:datastax-agent]
-command=/usr/share/datastax-agent/bin/datastax-agent -f
+[program:opscenter]
+command=/usr/share/opscenter/bin/opscenter -f
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
