--- a/virtualization/vagrant_ansible_docker/provisioning/playbook.yml
+++ b/virtualization/vagrant_ansible_docker/provisioning/playbook.yml
@@ -18,5 +18,7 @@
       apt_repository: repo='deb http://ppa.launchpad.net/chris-lea/node.js/ubuntu saucy main'
     - name: make sure nodejs is installed
       apt: pkg=nodejs
+    - name: make sure bridge-utils is installed
+      apt: pkg=bridge-utils
     - name: install pipework
       get_url: url=https://raw2.github.com/jpetazzo/pipework/master/pipework dest=/usr/local/bin/pipework mode=0555
