Added hostnames to the scripts and updated Wildfly to version 8.1.0.CR1.

--- a/virtualization/vagrant_meteorite/Vagrantfile
+++ b/virtualization/vagrant_meteorite/Vagrantfile
@@ -8,6 +8,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "saucy64"
 
+  # Set the hostname
+  config.vm.hostname = "vagrant-meteorite"
+
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
   config.vm.box_url = "http://cloud-images.ubuntu.com/vagrant/saucy/current/saucy-server-cloudimg-amd64-vagrant-disk1.box"
