--- a/virtualization/vagrant_wildfly/Vagrantfile
+++ b/virtualization/vagrant_wildfly/Vagrantfile
@@ -7,6 +7,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "saucy64"
+  config.vm.hostname = "vagrant-wildfly"
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
