--- a/virtualization/vagrant_docker/provisioning/playbook.yml
+++ b/virtualization/vagrant_docker/provisioning/playbook.yml
@@ -6,6 +6,10 @@
       apt: update_cache=yes cache_valid_time=3600
     - name: make sure joe is installed
       apt: pkg=joe
+    - name: configure tmux
+      shell: echo new-session > ~vagrant/.tmux.conf
+    - name: force colorful prompt
+      shell: sed -i -e 's,#force_color_prompt,force_color_prompt,g' ~vagrant/.bashrc
     - name: add apt_key for docker
       apt_key: url=https://get.docker.io/gpg
     - name: add repository for docker
@@ -15,7 +19,7 @@
     - name: add apt_key for nodejs
       apt_key: url=http://keyserver.ubuntu.com/pks/lookup?op=get&fingerprint=on&search=0xc7917b12
     - name: add repository for node
-      apt_repository: repo='deb http://ppa.launchpad.net/chris-lea/node.js/ubuntu saucy main'
+      apt_repository: repo='deb http://ppa.launchpad.net/chris-lea/node.js/ubuntu trusty main'
     - name: make sure nodejs is installed
       apt: pkg=nodejs
     - name: make sure bridge-utils is installed
