--- a/virtualization/vagrant_docker/dockerfiles/core/files/supervisord.conf
+++ b/virtualization/vagrant_docker/dockerfiles/core/files/supervisord.conf
@@ -10,6 +10,11 @@ stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
+[program:consul]
+command=/usr/local/bin/consul agent -server -bootstrap -bind=10.1.1.1 -data-dir /tmp/consul -config-dir /etc/consul.d
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
+stderr_logfile=/var/log/supervisor/%(program_name)s.log
+
 [program:nginx]
 command=/usr/sbin/nginx -c /etc/nginx/nginx.conf
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
