Added arping. Changed Cassandra and Opscenter to use the new images with Consul.

--- a/virtualization/vagrant_docker/dockerfiles/opscenter/Dockerfile
+++ b/virtualization/vagrant_docker/dockerfiles/opscenter/Dockerfile
@@ -1,12 +1,6 @@
 # Create a docker image to run Cassandra
-FROM sirile/oraclejre:0.4
+FROM sirile/oraclejre:0.5
 
-# Add the supervisor configuration
-ADD supervisord.conf /etc/supervisor/conf.d/supervisor.conf
-
-# Add the heartbeat script
-ADD files/dns-heartbeat.sh /usr/local/bin/dns-heartbeat.sh
-RUN chmod ugo+rx /usr/local/bin/dns-heartbeat.sh
 
 # Add the repository for Cassandra
 RUN echo "deb http://debian.datastax.com/community stable main" > /etc/apt/sources.list.d/datastax.list
@@ -16,9 +10,12 @@ RUN apt-get update
 # Install and configure Cassandra
 RUN apt-get install -y opscenter
 
-# Change the system to use dns before files for host name resolution
-RUN sed -i.bak 's/files dns/dns files/' /etc/nsswitch.conf
-RUN echo 'Acquire::ForceIPv4 "true";' > /etc/apt/apt.conf
+# Add the supervisor configuration
+ADD files/supervisord.conf /etc/supervisor/conf.d/supervisor.conf
+
+# Add the consul configuration for DNS and the services
+ADD files/config-consul.json /etc/consul.d/config-consul.json
+ADD files/opscenter-consul.json /etc/consul.d/opscenter-consul.json
 
 # Expose the ports
 EXPOSE 8888 22 61620
