Removed pipework as it's no longer needed. Added named container linking for Consul discovery. Updated README-files.

--- a/virtualization/vagrant_docker/dockerfiles/bare/files/supervisord.conf
+++ b/virtualization/vagrant_docker/dockerfiles/bare/files/supervisord.conf
@@ -11,6 +11,6 @@ stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
 [program:consul]
-command=/usr/local/bin/consul agent -join=10.1.1.1 -data-dir /tmp/consul -config-dir /etc/consul.d
+command=/usr/local/bin/consul agent -join=core -data-dir /tmp/consul -config-dir /etc/consul.d
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
