--- a/virtualization/vagrant_docker/dockerfiles/core/files/supervisord.conf
+++ b/virtualization/vagrant_docker/dockerfiles/core/files/supervisord.conf
@@ -11,7 +11,7 @@ stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
 [program:consul]
-command=/usr/local/bin/consul agent -server -bootstrap -client 0.0.0.0 -bind 10.1.1.1 -data-dir /tmp/consul -config-dir /etc/consul.d -ui-dir /opt/consul_ui
+command=/usr/local/bin/consul agent -server -bootstrap -client 0.0.0.0 -data-dir /tmp/consul -config-dir /etc/consul.d -ui-dir /opt/consul_ui
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 
