Added the installation of maestro and the prerequisites.

--- a/virtualization/vagrant_ubuntu_docker/Vagrantfile
+++ b/virtualization/vagrant_ubuntu_docker/Vagrantfile
@@ -22,6 +22,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   config.vm.synced_folder "dockerfiles/", "/home/vagrant/dockerfiles"
+  config.vm.synced_folder "~/Projects/", "/home/vagrant/Projects"
 
   config.vm.provider :virtualbox do |vb|
     # Use VBoxManage to customize the VM. For example to change memory:
