Added basic rsyslog configuration to containers.

--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/bare/Dockerfile
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/bare/Dockerfile
@@ -8,6 +8,9 @@ ADD files/supervisord.conf /etc/supervisor/conf.d/supervisor.conf
 # Add the consul configuration for DNS
 ADD files/config-consul.json /etc/consul.d/config-consul.json
 
+# Add the rsyslog configuration for log aggregation
+ADD files/rsyslog.conf /etc/rsyslog.conf
+
 # Expose the port(s)
 EXPOSE 22
 
