--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra.yaml
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra.yaml
@@ -10,6 +10,9 @@ services:
       core:
         ship: vagrant-docker
         ports: {ssh: '22:1000', elasticsearch:  9200, kibana: 80 , consului: 8500}
+        volumes:
+          /etc/localtime: /etc/localtime
+          /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: consului}]
         dns: localhost
@@ -22,6 +25,9 @@ services:
         ports: {ssh: '22:1121', opscenterui: 8888, agent: 61620}
         links:
             core: core
+        volumes:
+          /etc/localtime: /etc/localtime
+          /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
         dns: localhost
@@ -34,6 +40,9 @@ services:
         ports: {ssh: '22:1021', cassandra: 9160, agent: 61621}
         links:
             core: core
+        volumes:
+          /etc/localtime: /etc/localtime
+          /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
         dns: localhost
@@ -42,6 +51,9 @@ services:
         ports: {ssh: '22:1022', agent: "61621:61622"}
         links:
             core: core
+        volumes:
+          /etc/localtime: /etc/localtime
+          /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
         dns: localhost
@@ -50,6 +62,9 @@ services:
         ports: {ssh: '22:1023', agent: "61621:61623"}
         links:
             core: core
+        volumes:
+          /etc/localtime: /etc/localtime
+          /etc/timezone: /etc/timezone
         lifecycle:
           running: [{type: tcp, port: agent}]
         dns: localhost
