Added rsyslog configuration for log files.

--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/bare/files/supervisord.conf
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/bare/files/supervisord.conf
@@ -9,6 +9,7 @@ autorestart=true
 command=/usr/local/bin/consul agent -join=core -data-dir /tmp/consul -config-dir /etc/consul.d
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
+autorestart=true
 
 [program:sshd]
 command=/usr/sbin/sshd -D
