--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/rsyslog.conf
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/rsyslog.conf
@@ -5,7 +5,23 @@ $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $ActionResumeInterval 1
 $ActionResumeRetryCount -1
 
-# TODO: Add Cassandra specific files
+# Cassandra log
+$InputFileName /var/log/cassandra/system.log
+$InputFileTag cassandra:
+$InputFileStateFile state-cassandra
+$InputRunFileMonitor
+
+# Datastax-agent log
+$InputFileName /var/log/datastax-agent/agent.log
+$InputFileTag datastax-agent:
+$InputFileStateFile state-datastax-agent
+$InputRunFileMonitor
+
+# Consul log
+$InputFileName /var/log/supervisor/consul.log
+$InputFileTag consul:
+$InputFileStateFile state-consul
+$InputRunFileMonitor
 
 # Send everything to a logstash server named 'log.service.consul' on port 5000:
 *.*                             @@log.service.consul:5000
