--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/supervisord.conf
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/supervisord.conf
@@ -3,6 +3,7 @@ nodaemon=true
 
 [program:rsyslogd]
 command=/usr/sbin/rsyslogd -n
+autorestart=true
 
 [program:sshd]
 command=/usr/sbin/sshd -D
@@ -14,6 +15,7 @@ autorestart=true
 command=/usr/local/bin/consul agent -join=core -data-dir /tmp/consul -config-dir /etc/consul.d
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
+autorestart=true
 
 [program:cassandra]
 command=/usr/sbin/cassandra -f start
