--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/opscenter/files/rsyslog.conf
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/opscenter/files/rsyslog.conf
@@ -1,11 +1,21 @@
 $ModLoad imuxsock # for reading local syslog messages
-#$ModLoad imfile   # Load the imfile input module
+$ModLoad imfile   # Load the imfile input module
 
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $ActionResumeInterval 1
 $ActionResumeRetryCount -1
 
-# TODO: Add Opscenter specific files
+# Opscenterd log
+$InputFileName /var/log/opscenter/opscenterd.log
+$InputFileTag opscenterd:
+$InputFileStateFile state-opscenterd
+$InputRunFileMonitor
+
+# Consul log
+$InputFileName /var/log/supervisor/consul.log
+$InputFileTag consul:
+$InputFileStateFile state-consul
+$InputRunFileMonitor
 
 # Send everything to a logstash server named 'log.service.consul' on port 5000:
 *.*                             @@log.service.consul:5000
