--- a/virtualization/vagrant_ubuntu_docker/Vagrantfile
+++ b/virtualization/vagrant_ubuntu_docker/Vagrantfile
@@ -7,12 +7,8 @@ TIMEZONE = "Europe/Helsinki"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "trusty64"
+  config.vm.box = "ubuntu/trusty64"
   config.vm.hostname = "vagrant-docker"
-
-  # The url from where the 'config.vm.box' box will be fetched if it
-  # doesn't already exist on the user's system.
-  config.vm.box_url = "https://cloud-images.ubuntu.com/vagrant/trusty/current/trusty-server-cloudimg-amd64-vagrant-disk1.box"
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
