--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/core/Dockerfile
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/core/Dockerfile
@@ -3,19 +3,19 @@ FROM sirile/oraclejre:0.6
 MAINTAINER Ilkka Anttonen
 
 # Set up Consul UI
-RUN wget https://dl.bintray.com/mitchellh/consul/0.2.0_web_ui.zip -O /tmp/consul_ui.zip
+RUN wget https://dl.bintray.com/mitchellh/consul/0.3.0_web_ui.zip -O /tmp/consul_ui.zip
 RUN unzip /tmp/consul_ui.zip -d /opt/consul_ui
 
 # Install Elasticsearch and logstash, newer versions are nicer
-RUN wget https://download.elasticsearch.org/logstash/logstash/logstash-1.4.1.tar.gz -O /tmp/logstash.tar.gz
+RUN wget https://download.elasticsearch.org/logstash/logstash/logstash-1.4.2.tar.gz -O /tmp/logstash.tar.gz
 RUN (cd /opt && tar xzf /tmp/logstash.tar.gz)
 RUN wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.1.1.tar.gz -O /tmp/elasticsearch.tar.gz
 RUN (cd /opt && tar xzf /tmp/elasticsearch.tar.gz)
-ADD files/logstash-syslog.json /opt/logstash-1.4.1/logstash-syslog.json
+ADD files/logstash-syslog.json /opt/logstash-1.4.2/logstash-syslog.json
 
 # Install nginx and Kibana
 RUN apt-get install -y nginx-full
-RUN (cd /tmp && wget --no-check-certificate http://download.elasticsearch.org/kibana/kibana/kibana-latest.zip -O pkg.zip && unzip pkg.zip && cd kibana-* && cp -rf ./* /usr/share/nginx/html/)
+RUN (cd /tmp && wget --no-check-certificate http://download.elasticsearch.org/kibana/kibana/kibana-3.0.1.zip -O pkg.zip && unzip pkg.zip && cd kibana-* && cp -rf ./* /usr/share/nginx/html/)
 RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 RUN rm -rf /tmp/*
 RUN sed -i "s/elasticsearch: \"http:\/\/\"+window.location.hostname+\":9200\",/elasticsearch: \"http:\/\/10.10.10.30:9200\",/g"  /usr/share/nginx/html/config.js
