Added the automatic restart for datastax-agent and removed and unintended comment in the rsyslog config.

--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/rsyslog.conf
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/rsyslog.conf
@@ -1,5 +1,5 @@
 $ModLoad imuxsock # for reading local syslog messages
-#$ModLoad imfile   # Load the imfile input module
+$ModLoad imfile   # Load the imfile input module
 
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $ActionResumeInterval 1
