--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/supervisord.conf
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/cassandra/files/supervisord.conf
@@ -24,3 +24,4 @@ command=/usr/sbin/cassandra -f start
 command=/usr/share/datastax-agent/bin/datastax-agent -f
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
+autorestart=true
