Added instructions and node dock to help demonstrate the database calls.

--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/node/Dockerfile
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/node/Dockerfile
@@ -2,6 +2,12 @@
 FROM sirile/node:0.6
 MAINTAINER Ilkka Anttonen
 
+# Install CoffeeScript
+RUN npm install -g coffee-script
+
+# Install IcedCoffeeScript
+RUN npm install -g iced-coffee-script
+
 # Set up the supervisor configuration
 ADD files/supervisord.conf /etc/supervisor/conf.d/supervisor.conf
 
