Modified the bare-container to be a template. Added comments and README files for the template container.

--- a/virtualization/vagrant_ubuntu_docker/dockerfiles/template/Dockerfile
+++ b/virtualization/vagrant_ubuntu_docker/dockerfiles/template/Dockerfile
@@ -1,4 +1,4 @@
-# Create a docker image to run core services Consul, Elasticsearch, Logstash and Kibana
+# Example Dockerfile that can be used as a template
 FROM sirile/ubuntu:0.7
 MAINTAINER Ilkka Anttonen
 
@@ -7,6 +7,8 @@ ADD files/supervisord.conf /etc/supervisor/conf.d/supervisor.conf
 
 # Add the consul configuration for DNS
 ADD files/config-consul.json /etc/consul.d/config-consul.json
+# Add an example consul-file for service registration
+ADD files/example-consul.json /etc/consul.d/example-consul.json
 
 # Add the rsyslog configuration for log aggregation
 ADD files/rsyslog.conf /etc/rsyslog.conf
